--- a/pages/3635.html
+++ b/pages/3635.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,10 +310,10 @@ margin-left: 0em;
  This entry is about the document</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim Porter</a>, <em>The Crossed Menagerie: an introduction to crossed gadgetry and cohomology in algebra and topology</em>. (Notes, in part, prepared for the <em>XVI Encuentro Rioplatense de Algebra y Geometría Algebraica</em>, in Buenos Aires, 12-15 December 2006, and for course MATH5312, Spring-Summer term 2007, University of Ottawa) (<a class='existingWikiWord' href='/nlab/files/menagerie10a.pdf' title='new version'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Tim+Porter'>Tim Porter</a>, <em>The Crossed Menagerie: an introduction to crossed gadgetry and cohomology in algebra and topology</em>. (Notes, in part, prepared for the <em>XVI Encuentro Rioplatense de Algebra y Geometría Algebraica</em>, in Buenos Aires, 12-15 December 2006, and for course MATH5312, Spring-Summer term 2007, University of Ottawa) (<span class='newWikiWord'>pdf<a href='/nlab/files/menagerie12.pdf'>?</a></span>)</li>
 </ul>
 
-<p>This is an ongoing set of notes outlining an approach to <a class='existingWikiWord' href='/nlab/show/nonabelian+cohomology'>nonabelian cohomology</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, etc., and Grothendieck’s conjectured extension of ‘Galois-Poincaré theory’. The title refers to the array of strange beasties that occur as generalisations of <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed modules</a>. (The present version is over 921 pages long, and is changing quite often. A fairly stable version (but up-dates are planned shortly!) is available as a download, <a class='existingWikiWord' href='/nlab/files/menagerie10a.pdf' title='new version'>here</a>.</p>
+<p>This is an ongoing set of notes outlining an approach to <a class='existingWikiWord' href='/nlab/show/nonabelian+cohomology'>nonabelian cohomology</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, etc., and Grothendieck’s conjectured extension of ‘Galois-Poincaré theory’. The title refers to the array of strange beasties that occur as generalisations of <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed modules</a>. (The present version is over 921 pages long, and is changing quite often. A fairly stable version (but up-dates are planned shortly!) is available as a download, <span class='newWikiWord'>here<a href='/nlab/files/menagerie12.pdf'>?</a></span>.</p>
 
 <p>These notes, or at least the first few chapters of them, acted as course notes for a 4 lecture course in Buenos Aires, and later on for a course on cohomology in Ottawa.</p>
 
@@ -409,7 +407,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>4.3 Cat<math class='maruku-mathml' display='inline' id='mathml_fb26ee3af5960fe7dd9ac9776fff77e20c5dd7b2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>^n</annotation></semantics></math> -groups and crossed <math class='maruku-mathml' display='inline' id='mathml_fb26ee3af5960fe7dd9ac9776fff77e20c5dd7b2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cubes</p>
+<p>4.3 Cat<math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>^n</annotation></semantics></math> -groups and crossed <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cubes</p>
 </li>
 
 <li>
@@ -443,7 +441,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>5.5 <math class='maruku-mathml' display='inline' id='mathml_fb26ee3af5960fe7dd9ac9776fff77e20c5dd7b2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>W</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{W}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_fb26ee3af5960fe7dd9ac9776fff77e20c5dd7b2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>, and twisted Cartesian products</p>
+<p>5.5 <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>W</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{W}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>, and twisted Cartesian products</p>
 </li>
 
 <li>
@@ -477,7 +475,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>6.6 Relative <math class='maruku-mathml' display='inline' id='mathml_fb26ee3af5960fe7dd9ac9776fff77e20c5dd7b2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-torsors</p>
+<p>6.6 Relative <math class='maruku-mathml' display='inline' id='mathml_647fd610d6796cd5c18d19893967c2eb16398704_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-torsors</p>
 </li>
 </ul>
 </li>
@@ -613,19 +611,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  2, 2017 01:53:47 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (2.27.42.101)
+  <p>
+  Last revised on April 17, 2018 at 08:33:35.
+  See the <a href="https://ncatlab.org/nlab/history/Crossed Menagerie" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Crossed+Menagerie" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Crossed+Menagerie/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Crossed+Menagerie" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Crossed+Menagerie" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Crossed+Menagerie" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Crossed+Menagerie/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Crossed+Menagerie" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Crossed+Menagerie" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Crossed+Menagerie" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Crossed+Menagerie" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Crossed+Menagerie" id="view_source" rel="nofollow">Source</a>
