--- a/pages/8443.html
+++ b/pages/8443.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4219/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -520,12 +518,18 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/group'>group</a> and <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo>↪</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>H \hookrightarrow G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/normal+subgroup'>normal subgroup</a>, the <a class='existingWikiWord' href='/nlab/show/quotient+group'>quotient group</a> <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> is the set of <a class='existingWikiWord' href='/nlab/show/coset'>cosets</a>, equipped with a group structure induced from <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/group'>group</a> and <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo>↪</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>H \hookrightarrow G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/normal+subgroup'>normal subgroup</a>, the <a class='existingWikiWord' href='/nlab/show/quotient+group'>quotient group</a> <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math> is the set of <a class='existingWikiWord' href='/nlab/show/coset'>cosets</a>, equipped with a group structure induced from <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>For <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>↪</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \hookrightarrow B</annotation></semantics></math> a morphism between <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian groups</a> the quotient <math class='maruku-mathml' display='inline' id='mathml_3bb372477c27a6a2f519177d7268476bd4bd1c2c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>/</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>B/A</annotation></semantics></math> is equivalently the <a class='existingWikiWord' href='/nlab/show/cokernel'>cokernel</a> of the inclusion.</li>
+<li>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>↪</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \hookrightarrow B</annotation></semantics></math> a morphism between <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian groups</a> the quotient <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>/</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>B/A</annotation></semantics></math> is equivalently the <a class='existingWikiWord' href='/nlab/show/cokernel'>cokernel</a> of the inclusion.</p>
+</li>
+
+<li>
+<p>The quotient groups of any group by itself is the <a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a>: <math class='maruku-mathml' display='inline' id='mathml_da6f6eb73107a7b09af9da084e57acc6fb379935_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>G</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>G/G = 1</annotation></semantics></math>.</p>
+</li>
 </ul>
 
 <h2 id='related_concepts_2'>Related concepts</h2>
@@ -546,19 +550,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 22, 2015 15:03:24 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.180)
+  <p>
+  Last revised on April 17, 2018 at 09:16:07.
+  See the <a href="https://ncatlab.org/nlab/history/quotient group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quotient+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quotient+group/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/quotient+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quotient+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/quotient+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quotient+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/quotient+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quotient+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/quotient+group" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/quotient+group" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/quotient+group" id="view_source" rel="nofollow">Source</a>
