--- a/pages/10385.html
+++ b/pages/10385.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +306,21 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <a class='existingWikiWord' href='/nlab/show/group'>group</a> which is not an <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>.</p>
+    <h2 id='idea'>Idea</h2>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/group'>group</a> which is not an <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring'>noncommutative ring</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/nonabelian+cohomology'>nonabelian cohomology</a></p>
+</li>
+</ul>
 
 <p>
 </p>
@@ -319,19 +331,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September 15, 2013 20:47:45 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.38)
+  <p>
+  Last revised on April 17, 2018 at 09:21:30.
+  See the <a href="https://ncatlab.org/nlab/history/non-abelian group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-abelian+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/non-abelian+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-abelian+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/non-abelian+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-abelian+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/non-abelian+group" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/non-abelian+group" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/non-abelian+group" id="view_source" rel="nofollow">Source</a>
