--- a/pages/19196.html
+++ b/pages/19196.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      trivial group in nLab
+      semi-free action in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      trivial group
+      semi-free action
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8452/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8451/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -507,39 +507,160 @@ margin-left: 0em;
   <a href='/nlab/edit/group+theory+-+contents'>Edit this sidebar</a>
 </p>
 </div></div>
+
+<h4 id='representation_theory'>Representation theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/representation+theory'>representation theory</a></strong></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/geometric+representation+theory'>geometric representation theory</a></strong></p>
+
+<h2 id='ingredients'>Ingredients</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/linear+algebra'>linear algebra</a>, <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>, <a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></li>
+</ul>
+
+<h2 id='definitions'>Definitions</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/2-representation'>2-representation</a>, <a class='existingWikiWord' href='/nlab/show/infinity-representation'>∞-representation</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/group'>group</a>, <a class='existingWikiWord' href='/nlab/show/infinity-group'>∞-group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/group+algebra'>group algebra</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+group'>algebraic group</a>, <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-module'>n-vector space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a>, <a class='existingWikiWord' href='/nlab/show/symplectic+vector+space'>symplectic vector space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/infinity-action'>∞-action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+object'>equivariant object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bimodule'>bimodule</a>, <a class='existingWikiWord' href='/nlab/show/Morita+equivalence'>Morita equivalence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/induced+representation'>induced representation</a>, <a class='existingWikiWord' href='/nlab/show/Frobenius+reciprocity'>Frobenius reciprocity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a>, <a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach space</a>, <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/orbit'>orbit</a>, <a class='existingWikiWord' href='/nlab/show/coadjoint+orbit'>coadjoint orbit</a>, <a class='existingWikiWord' href='/nlab/show/Killing+form'>Killing form</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/unitary+representation'>unitary representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a>, <a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/socle'>socle</a>, <a class='existingWikiWord' href='/nlab/show/quiver'>quiver</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module+algebra'>module algebra</a>, <a class='existingWikiWord' href='/nlab/show/comodule+algebra'>comodule algebra</a>, <a class='existingWikiWord' href='/nlab/show/Hopf+action'>Hopf action</a>, <a class='existingWikiWord' href='/nlab/show/measuring'>measuring</a></p>
+</li>
+</ul>
+
+<h2 id='geometric_representation_theory'>Geometric representation theory</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/D-module'>D-module</a>, <a class='existingWikiWord' href='/nlab/show/perverse+sheaf'>perverse sheaf</a>,</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+group'>Grothendieck group</a>, <a class='existingWikiWord' href='/nlab/show/Lambda-ring'>lambda-ring</a>, <a class='existingWikiWord' href='/nlab/show/symmetric+function'>symmetric function</a>, <a class='existingWikiWord' href='/nlab/show/formal+group'>formal group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/principal+bundle'>principal bundle</a>, <a class='existingWikiWord' href='/nlab/show/torsor'>torsor</a>, <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a>, <a class='existingWikiWord' href='/nlab/show/Atiyah+Lie+algebroid'>Atiyah Lie algebroid</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+function+theory'>geometric function theory</a>, <a class='existingWikiWord' href='/nlab/show/groupoidification'>groupoidification</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Eilenberg-Moore+category'>Eilenberg-Moore category</a>, <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a>, <a class='existingWikiWord' href='/nlab/show/actegory'>actegory</a>, <a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/reconstruction+theorem'>reconstruction theorems</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Borel-Weil+theorem'>Borel-Weil-Bott theorem</a></p>
+</li>
+
+<li>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kazhdan-Lusztig+theory'>Kazhdan-Lusztig theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BBDG+decomposition+theorem'>BBDG decomposition theorem</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/representation+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#properties'>Properties</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>The <strong>trivial group</strong> is the <a class='existingWikiWord' href='/nlab/show/group'>group</a> whose underlying <a class='existingWikiWord' href='/nlab/show/set'>set</a> is the <a class='existingWikiWord' href='/nlab/show/singleton'>singleton</a>, hence whose only <a class='existingWikiWord' href='/nlab/show/element'>element</a> is the <a class='existingWikiWord' href='/nlab/show/monoid'>neutral element</a>.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> is called <em>semi-free</em> if it is a <a class='existingWikiWord' href='/nlab/show/free+action'>free action</a> after restriction to the <a class='existingWikiWord' href='/nlab/show/complement'>complement</a> of the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed points</a>. In other words, it is semi-free if all its <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer groups</a> are either the full group itself or the <a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a>.</p>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>nonabelian groups</a> the trivial group is usually denoted <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>, while in the context of <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian groups</a> it is usually denoted <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>.</p>
+<h2 id='references'>References</h2>
 
-<p>The trivial group is a <a class='existingWikiWord' href='/nlab/show/zero+object'>zero object</a> (both <a class='existingWikiWord' href='/nlab/show/initial+object'>initial</a> and <a class='existingWikiWord' href='/nlab/show/terminal+object'>terminal</a>) of <a class='existingWikiWord' href='/nlab/show/Grp'>Grp</a>.</p>
+<ul>
+<li id='Stong70'>
+<p><a class='existingWikiWord' href='/nlab/show/Robert+Stong'>Robert Stong</a>, <em>Semi-free group actions</em>, Illinois Journal of Mathematics, Volume 23, Number 4, 1979 (<a href='https://projecteuclid.org/download/pdf_1/euclid.ijm/1256047939'>pdf</a>)</p>
+</li>
 
-<h2 id='examples'>Examples</h2>
+<li>
+<p>Mikiya Masuda, Taras Panov, <em>Semifree circle actions, Bott towers, and quasitoric manifolds</em>, Sbornik Math. 199 (2008), no.7-8, 1201-1223 (<a href='https://arxiv.org/abs/math/0607094'>arXiv:math/0607094</a>)</p>
+</li>
 
-<p>The trivial group is a <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of any other group, and the corresponding inclusion <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>↪</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>1 \hookrightarrow G</annotation></semantics></math> is the unique such group homomorpism.</p>
-
-<p>The <a class='existingWikiWord' href='/nlab/show/quotient+group'>quotient group</a> of any <a class='existingWikiWord' href='/nlab/show/group'>group</a> <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> by itself is the trivial group: <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>G</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>G/G = 1</annotation></semantics></math>, and the quotient projection <math class='maruku-mathml' display='inline' id='mathml_f372a68163e519b467397baa29628793bc9fc167_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>→</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>G</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>G \to G/G =1</annotation></semantics></math> is the unique such group homomorphism.</p>
-
-<p>It can be nontrivial to decide from a <a class='existingWikiWord' href='/nlab/show/group+presentation'>group presentation</a> whether a group so presented is trivial, and in fact the general problem is <a class='existingWikiWord' href='/nlab/show/decidability'>undecidable</a>. See also <a class='existingWikiWord' href='/nlab/show/combinatorial+group+theory'>combinatorial group theory</a> and <a class='existingWikiWord' href='/nlab/show/variety+of+algebras'>word problem</a>.</p>
-
-<h2 id='properties'>Properties</h2>
-
-<p>The trivial group is an example of a <a class='existingWikiWord' href='/nlab/show/trivial+algebra'>trivial algebra</a>.</p>
-
-<p>
- 
-</p>
+<li>
+<p>Ronald Dotzel, <em>Semifree finite group actions on homotopy spheres</em>, Pacific Journal of Mathematics, Vol 103, No. 1, 1982</p>
+</li>
+</ul>
 
 <p>
- 
- 
- 
 </p>
 
 <p>
@@ -549,22 +670,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 17, 2018 at 09:53:13.
-  See the <a href="https://ncatlab.org/nlab/history/trivial group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on April 17, 2018 at 09:08:07.
+  See the <a href="https://ncatlab.org/nlab/history/semi-free action" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trivial+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trivial+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/trivial+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trivial+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/semi-free+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/trivial+group" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/semi-free+action" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/trivial+group" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/semi-free+action" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/trivial+group" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/semi-free+action" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
