--- a/pages/4670.html
+++ b/pages/4670.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,11 +306,199 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='trivial_algebras'>Trivial algebras</h1>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='algebra'>Algebra</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/universal+algebra'>universal algebra</a></p>
+
+<h2 id='algebraic_theories'>Algebraic theories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theory'>algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/2-Lawvere+theory'>2-algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory'>(∞,1)-algebraic theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-monad'>(∞,1)-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operad'>operad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-operad'>(∞,1)-operad</a></p>
+</li>
+</ul>
+
+<h2 id='algebras_and_modules'>Algebras and modules</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module+over+a+monad'>algebra over a monad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-monad'>∞-algebra over an (∞,1)-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+a+Lawvere+theory'>algebra over an algebraic theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-algebraic+theory'>∞-algebra over an (∞,1)-algebraic theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-operad'>∞-algebra over an (∞,1)-operad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/infinity-action'>∞-action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/infinity-representation'>∞-representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated bundle</a>, <a class='existingWikiWord' href='/nlab/show/associated+infinity-bundle'>associated ∞-bundle</a></p>
+</li>
+</ul>
+
+<h2 id='higher_algebras'>Higher algebras</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+%28infinity%2C1%29-category'>monoidal (∞,1)-category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoid+in+a+monoidal+%28infinity%2C1%29-category'>monoid in an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+%28infinity%2C1%29-category'>commutative monoid in an (∞,1)-category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p>symmetric monoidal (∞,1)-category of spectra</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+smash+product+of+spectra'>symmetric monoidal smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a>, <a class='existingWikiWord' href='/nlab/show/module+spectrum'>module spectrum</a>, <a class='existingWikiWord' href='/nlab/show/algebra+spectrum'>algebra spectrum</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/A-infinity-algebra'>A-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-infinity-ring'>A-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/A-infinity-space'>A-∞ space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/C-infinity+algebra'>C-∞ algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/E-infinity+algebra'>E-∞ algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module+bundle'>(∞,1)-module bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/multiplicative+cohomology+theory'>multiplicative cohomology theory</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='model_category_presentations'>Model category presentations</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+algebras'>model structure on simplicial T-algebras</a> / <a class='existingWikiWord' href='/nlab/show/homotopy+T-algebra'>homotopy T-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a></p>
+</li>
+</ul>
+
+<h2 id='geometry_on_formal_duals_of_algebras'>Geometry on formal duals of algebras</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne+conjecture'>Deligne conjecture</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+Dold-Kan+correspondence'>monoidal Dold-Kan correspondence</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/higher+algebra+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='trivial_algebras'>Trivial algebras</h1>
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>Every <a class='existingWikiWord' href='/nlab/show/algebraic+category'>algebraic category</a> (in just about any sense of the term) has a <a class='existingWikiWord' href='/nlab/show/terminal+object'>terminal object</a> which is usually called the <strong>trivial algebra</strong>, often denoted <math class='maruku-mathml' display='inline' id='mathml_f525046e7390f12371a0150b24f02bff985e25e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_f525046e7390f12371a0150b24f02bff985e25e0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>. Its <a class='existingWikiWord' href='/nlab/show/underlying+set'>underlying set</a> is a <a class='existingWikiWord' href='/nlab/show/singleton'>singleton</a>, and every algebraic operation <math class='maruku-mathml' display='inline' id='mathml_f525046e7390f12371a0150b24f02bff985e25e0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>1</mn> <mi>n</mi></msup><mo>→</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>1^n \to 1</annotation></semantics></math> is the unique <a class='existingWikiWord' href='/nlab/show/function'>function</a> to the singleton set.</p>
+<p>Every <a class='existingWikiWord' href='/nlab/show/algebraic+category'>algebraic category</a> (in just about any sense of the term) has a <a class='existingWikiWord' href='/nlab/show/terminal+object'>terminal object</a> which is usually called the <strong>trivial algebra</strong>, often denoted <math class='maruku-mathml' display='inline' id='mathml_1e572f3abda32b205bf336074cd576156f0f662c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_1e572f3abda32b205bf336074cd576156f0f662c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn></mrow><annotation encoding='application/x-tex'>1</annotation></semantics></math>. Its <a class='existingWikiWord' href='/nlab/show/underlying+set'>underlying set</a> is a <a class='existingWikiWord' href='/nlab/show/singleton'>singleton</a>, and every algebraic operation <math class='maruku-mathml' display='inline' id='mathml_1e572f3abda32b205bf336074cd576156f0f662c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>1</mn> <mi>n</mi></msup><mo>→</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>1^n \to 1</annotation></semantics></math> is the unique <a class='existingWikiWord' href='/nlab/show/function'>function</a> to the singleton set.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -323,28 +509,32 @@ margin-left: 0em;
 
 <li>The <a class='existingWikiWord' href='/nlab/show/trivial+ring'>trivial ring</a> is the trivial <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>.</li>
 
-<li>The <math class='maruku-mathml' display='inline' id='mathml_f525046e7390f12371a0150b24f02bff985e25e0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-dimensional vector space is the trivial <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a>.</li>
+<li>The <math class='maruku-mathml' display='inline' id='mathml_1e572f3abda32b205bf336074cd576156f0f662c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-dimensional vector space is the trivial <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a>.</li>
 
 <li>The <a class='existingWikiWord' href='/nlab/show/trivial+Lie+algebra'>trivial Lie algebra</a> is the trivial <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>.</li>
 
 <li>The <a class='existingWikiWord' href='/nlab/show/terminal+category'>trivial category</a> is the trivial <a class='existingWikiWord' href='/nlab/show/strict+category'>strict category</a>.</li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on September  4, 2010 19:16:36 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (173.190.156.19)
+  <p>
+  Last revised on April 17, 2018 at 09:19:15.
+  See the <a href="https://ncatlab.org/nlab/history/trivial algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trivial+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/trivial+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trivial+algebra/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/trivial+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trivial+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/trivial+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/trivial+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/trivial+algebra" id="view_source" rel="nofollow">Source</a>
