--- a/pages/6812.html
+++ b/pages/6812.html
@@ -327,7 +327,7 @@ margin-left: 0em;
 <p>on the beginnings of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>:</p>
 
 <ul>
-<li>van Nieuwenhuizen <em>Some personal recollections about the discovery of supergravity</em>, 1993 (<a href='http://www.iaea.org/inis/collection/NCLCollectionStore/_Public/30/028/30028372.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/vanNieuwenhuizen1993.pdf' title='pdf'>pdf</a>)</li>
+<li id='vanNieuwenhuizen1993'>van Nieuwenhuizen <em>Some personal recollections about the discovery of supergravity</em>, 1993 (<a href='http://www.iaea.org/inis/collection/NCLCollectionStore/_Public/30/028/30028372.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/vanNieuwenhuizen1993.pdf' title='pdf'>pdf</a>)</li>
 </ul>
 
 <p>Part of this story also appears as</p>
@@ -336,7 +336,7 @@ margin-left: 0em;
 <li>David Appell, <em>When supergravity was born</em>, 2012 (<a href='http://www.davidappell.com/articles/PWSep12appell-supergravity.pdf'>pdf</a>)</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_8a4565ffb269810b84e2a2fd4a2158e34ec6889b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_4905cda55cc1fee57078f6c149cd35e210474f61_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></li>
@@ -347,7 +347,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 17, 2018 at 12:59:08.
+  Last revised on April 17, 2018 at 13:05:11.
   See the <a href="https://ncatlab.org/nlab/history/Peter van Nieuwenhuizen" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
