--- a/pages/1271.html
+++ b/pages/1271.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4102/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -483,7 +481,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -496,9 +494,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -698,7 +708,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Not every <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> is a <a class='existingWikiWord' href='/nlab/show/concrete+category'>concrete category</a>, such as <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a> or <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/Mod'>Mod</a>, hence its <a class='existingWikiWord' href='/nlab/show/object'>objects</a> do not necessarily have underlying <a class='existingWikiWord' href='/nlab/show/set'>sets</a> whose elements one can reason about. To circumvent this and reason by “<a class='existingWikiWord' href='/nlab/show/diagram+chasing'>diagram chases</a>” of elements in general abelian categories, one can instead use <a class='existingWikiWord' href='/nlab/show/generalized+element'>generalized elements</a> in a suitable way.</p>
+<p>Not every <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> is a <a class='existingWikiWord' href='/nlab/show/concrete+category'>concrete category</a>, such as <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a> or <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math><a class='existingWikiWord' href='/nlab/show/Mod'>Mod</a>, hence its <a class='existingWikiWord' href='/nlab/show/object'>objects</a> do not necessarily have underlying <a class='existingWikiWord' href='/nlab/show/set'>sets</a> whose elements one can reason about. To circumvent this and reason by “<a class='existingWikiWord' href='/nlab/show/diagram+chasing'>diagram chases</a>” of elements in general abelian categories, one can instead use <a class='existingWikiWord' href='/nlab/show/generalized+element'>generalized elements</a> in a suitable way.</p>
 
 <p>This is closely related to embedding the abelian category fully-faithfully and exactly into a concrete abelian category. See at <em><a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a></em> the section <em><a href='abelian+category#EmbeddingTheorems'>Embedding theorems</a></em> for more on this.</p>
 
@@ -706,7 +716,7 @@ margin-left: 0em;
 
 <p>One definition goes likes this (<a href='#MacLane'>MacLane, VIII.4</a> and also for instance <a href='#Gelfand-Manin'>Gelfand-Manin, II.5</a>):</p>
 
-<p>An <strong>element</strong> of an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> in a given <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[X,h]</annotation></semantics></math> of pairs <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,h)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is an object of <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>h:X\to X&#39;</annotation></semantics></math> a morphism (hence a <a class='existingWikiWord' href='/nlab/show/generalized+element'>generalized element</a>) and the equivalence is defined as follows: <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>]</mo><mo>=</mo><mo stretchy='false'>[</mo><mi>Y</mi><mo>,</mo><mi>k</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[X,h] = [Y,k]</annotation></semantics></math> iff there exists an object <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi></mrow><annotation encoding='application/x-tex'>Z</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <a class='existingWikiWord' href='/nlab/show/epimorphism'>epimorphisms</a> <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>u</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>u:Z\to X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>v:Z\to Y</annotation></semantics></math> such that <math class='maruku-mathml' display='inline' id='mathml_f36dbcd560925be09a619f26e3ce09da45bcd8ac_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi><mo>∘</mo><mi>u</mi><mo>=</mo><mi>k</mi><mo>∘</mo><mi>v</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>X</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>h\circ u = k\circ v : Z\to X&#39;</annotation></semantics></math>.</p>
+<p>An <strong>element</strong> of an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> in a given <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[X,h]</annotation></semantics></math> of pairs <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,h)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is an object of <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>W</mi></mrow><annotation encoding='application/x-tex'>h:X\to W</annotation></semantics></math> a morphism (hence a <a class='existingWikiWord' href='/nlab/show/generalized+element'>generalized element</a>) and the equivalence is defined as follows: <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>X</mi><mo>,</mo><mi>h</mi><mo stretchy='false'>]</mo><mo>=</mo><mo stretchy='false'>[</mo><mi>Y</mi><mo>,</mo><mi>k</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[X,h] = [Y,k]</annotation></semantics></math> iff there exists an object <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi></mrow><annotation encoding='application/x-tex'>Z</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <a class='existingWikiWord' href='/nlab/show/epimorphism'>epimorphisms</a> <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>u</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>u:Z\to X</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>v:Z\to Y</annotation></semantics></math> such that <math class='maruku-mathml' display='inline' id='mathml_d37a75ce50f8a68016fa92a3b1c1a1471499b8c7_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>h</mi><mo>∘</mo><mi>u</mi><mo>=</mo><mi>k</mi><mo>∘</mo><mi>v</mi><mo>:</mo><mi>Z</mi><mo>→</mo><mi>W</mi></mrow><annotation encoding='application/x-tex'>h\circ u = k\circ v : Z\to W</annotation></semantics></math>.</p>
 
 <p>However, beware that the passage to equivalence classes does not respect the abelian group structure and hence generalized elements in this sense cannot be added or subtracted. A more natural approach is discussed in (<a href='#Bergman'>Bergman</a>) where the actual generalized elements are remembered but a refinement of their domain is allowed, much as familiar from <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a>.</p>
 
@@ -734,19 +744,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 31, 2015 20:28:00 
-  by <a class="existingWikiWord" href="/nlab/show/Ingo+Blechschmidt">Ingo Blechschmidt</a>
-  (188.174.93.61)
+  <p>
+  Last revised on April 18, 2018 at 15:26:27.
+  See the <a href="https://ncatlab.org/nlab/history/element in an abelian category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/element+in+an+abelian+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/element+in+an+abelian+category/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/element+in+an+abelian+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/element+in+an+abelian+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/element+in+an+abelian+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/element+in+an+abelian+category/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/element+in+an+abelian+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/element+in+an+abelian+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/element+in+an+abelian+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/element+in+an+abelian+category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/element+in+an+abelian+category" id="view_source" rel="nofollow">Source</a>
